hphp/hack/test/typecheck/array/disallow_incompatible_type_parameters_for_darray.php
<?hh // partial

function test(): darray<string, int> {
  return darray[true => false];
}
